--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -38,7 +38,7 @@
 
   <div class="field">
     <%= form.label :cover %>
-    <%= form.text_field :cover %>
+    <%= form.file_field :cover %>
   </div>
 
   <div class="field">
