--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -27,11 +27,6 @@
   </div>
 
   <div class="field">
-    <%= form.label :tag %>
-    <%= form.text_field :tag %>
-  </div>
-
-  <div class="field">
     <%= form.label :author %>
     <%= form.text_field :author %>
   </div>
@@ -39,6 +34,11 @@
   <div class="field">
     <%= form.label :cover %>
     <%= form.file_field :cover %>
+  </div>
+
+  <div class="field">
+    <%= form.label :squarecover %>
+    <%= form.file_field :squarecover %>
   </div>
 
   <div class="field">
