--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+body {
+  background-color: black;
+  color: white;
+}
+
+a,
+a:visited {
+  color: #79ff39;
+  text-decoration: none;
+}
