--- a/app/views/layouts/show.html.erb
+++ b/app/views/layouts/show.html.erb
@@ -31,6 +31,11 @@
 </p>
 
 <p>
+  <strong>Squarecover:</strong>
+  <%= image_tag @layout.squarecover.url %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @layout.description %>
 </p>
