--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -42,6 +42,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :squarecover %>
+    <%= form.file_field :squarecover %>
+  </div>
+
+  <div class="field">
     <%= form.label :description %>
     <%= form.text_field :description %>
   </div>
