--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -8,8 +8,8 @@
   <%= project.type %>
   <%= project.head %>
   <%= project.tag %>
-  <%#= image_tag project.cover.url || "", width: 200 %>
-  <%#= image_tag project.squarecover.url || "", width: 100 %>
+  <%= image_tag project.cover.url || "", width: 200 %>
+  <%= image_tag project.squarecover.url || "", width: 100 %>
   <%= link_to 'Show', project %>
   <%= link_to 'Edit', edit_layout_path(project) %>
   <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %>
@@ -17,5 +17,3 @@
 
 <% end %>
 <br>
-
-<%= link_to 'New Project', new_project_path %>
