--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,8 +2,8 @@
 
 <%= link_to 'Энциклопедия', articles_path %>
 <%= link_to 'Проекты', projects_path %>
-<%#= link_to 'About', about_path %>
-<%#= link_to 'Сотрудничество', new_cooperation_path(cooperation) %>
+<%#= link_to 'О нас', about_path %>
+<%= link_to 'Сотрудничество', new_cooperation_path(@cooperation) %>
 
 <h1>Энциклопедия</h1>
 
