--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,7 +16,7 @@
   <%= image_tag project.cover.url, width: 200 %>
   <%= image_tag project.squarecover.url, width: 100 %>
   <%= link_to 'Show', project %>
-  <%= link_to 'Edit', edit_layout_path(project) %>
+  <%= link_to 'Edit', edit_page_path(project) %>
   <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
 
