--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Layout</h1>
+<h1>Editing Page</h1>
 
 <%= render 'form', article: @article %>
 
 <%= link_to 'Show', @article %> |
-<%= link_to 'Back', layouts_path %>
+<%= link_to 'Back', pages_path %>
