--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: layout, local: true) do |form| %>
-  <% if layout.errors.any? %>
+<%= form_with(model: page, local: true) do |form| %>
+  <% if page.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(layout.errors.count, "error") %> prohibited this layout from being saved:</h2>
+      <h2><%= pluralize(page.errors.count, "error") %> prohibited this page from being saved:</h2>
 
       <ul>
-        <% layout.errors.full_messages.each do |message| %>
+        <% page.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
