--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,8 +15,7 @@
   <%= image_tag article.cover.url || "", width: 200 %>
   <%= image_tag article.squarecover.url || "", width: 100%>
   <%= link_to 'Show', article %>
-  <%= link_to 'Edit', edit_page_path(article) %>
-  <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to 'Edit', edit_article_path(article) %>
 </div>
 
 <% end %>
