--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -21,4 +21,6 @@
 <% end %>
 <br>
 
-<%= link_to 'New Page', new_page_path %>
+<%#= link_to 'New Page', new_page_path %>
+<%= link_to 'New Project', new_project_path %>
+<%= link_to 'New Article', new_article_path %>
